Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome to Montgomery Hills Baptist Church</h1>
-<p>We don't have any front page content yet.  Check back later.</p>
+<div class="center hero-unit">
+	<h1>Welcome to Montgomery Hills Baptist Church</h1>
+
+	<p>We don't have any front page content yet.  Check back later.</p>
+
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
+
+</div>
