--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,5 @@
-<h1>Sign up</h1>
+<% provide(:header, 'Sign up') %>
+<% provide(:submit, 'Create my account') %>
 
-<div class="row">
-	<div class="span6 offset3">
-		<%= form_for(@user) do |f| %>
+<%= render 'users/edit_form' %>
 
-			<%= render 'shared/error_messages' =%>
-
-			<%= f.label :name %>
-			<%= f.text_field :name %>
-
-			<%= f.label :email %>
-			<%= f.text_field :email %>
-
-			<%= f.label :password %>
-			<%= f.password_field :password %>
-
-			<%= f.label :password_confirmation, "Confirmation" %>
-			<%= f.password_field :password_confirmation %>
-
-			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
-		<% end %>
-	</div>
-</div>
