--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
 	<small>
-		<span class="info">Montgomery Hills Baptist Church</span>
-		<span class="info">9727 Georgia Ave. Silver Spring, MD 20910</span>
-		<span class="info">301-681-7990</span>
+		<span class="info"><%= @site_info.title %></span>
+		<span class="info"><%= @site_info.address %></span>
+		<span class="info"><%= @site_info.phone %></span>
 	</small>
 	<nav>
 		<ul>
