--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,23 @@
 		<%= render 'layouts/header' %>
 
 		<div class="container">
-			<% flash.each do |key, value| %>
-				<div class="alert alert-<%= key %>"><%= value %></div>
-			<% end %>
-			<%= yield %>
+			<%= render 'layouts/banner' %>
+
+			<div class="row">
+ 
+				<div class="span3">
+					<%= render 'layouts/sidebar' %>
+				</div>
+
+				<div class="span9">
+					<% flash.each do |key, value| %>
+						<div class="alert alert-<%= key %>"><%= value %></div>
+					<% end %>
+					<%= yield %>
+				</div>
+
+			</div>
+
 			<%= render 'layouts/footer' %>
 			<%= debug(params) if Rails.env.development? %>
 		</div>
