Update formatting of main content to account for sidebar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,7 +44,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	font-size: 3em;
-	letter-spacing: -2px;
+	letter-spacing: -1px;
+	margin-top: 10px;
 	margin-bottom: 30px;
 	text-align: center;
 }
@@ -52,7 +53,7 @@ h1 {
 h2 {
 	font-size: 1.7em;
 	letter-spacing: -1px;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	text-align: center;
 	font-weight: normal;
 	color: $grayLight;
