--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -130,20 +130,24 @@ footer {
 	margin: 40px 5px;
 	padding: 10px 5px 10px 10px;
 	background-color: $grayLighter;
-	font-size: 0.9em;
+	font-size: 0.8em;
 	h2 {
-		font-size: 1.5em;
+		font-size: 2em;
 		color: black;
-		margin-bottom: 10px;
+		margin-bottom: 15px;
+	}
+	h5 {
+		padding-top: 5px;
+		padding-bottom: 5px;
 	}
 	.subhead {
 		font-size: 1.1em;
 		font-weight: bold;
-		padding: 10px 0 5px 0;
+		padding-top: 10px;
 	}
 }
 
-.sidebar {
+.sidebar-foo {
 	section {
 		padding: 10px 0;
 		border-top: 1px solid $grayLighter;
@@ -177,9 +181,40 @@ input, textarea, select, .uneditable-input {
 	@include box_sizing;
 }
 
-/* users index */
+.simple_form {
+	.control-label {
+		font-size: 1.2em;
+	}
+	.help-block {
+		font-size: 1.0em;
+		color: gray;
+	}
+	.btn-primary {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	abbr {
+		display: none;
+	}
+}
+
+/* Index lists */
 
 .users {
+	list-style: none;
+	margin: 0;
+	li {
+		overflow: auto;
+		padding: 10px 0;
+		border-top: 1px solid $grayLighter;
+		&:last-child {
+			border-bottom: 1px solid $grayLighter;
+		}
+	}
+}
+
+.articles {
 	list-style: none;
 	margin: 0;
 	li {
