--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,8 @@
 
 <%= will_paginate %>
 
-<ul class="articles">
+<div class="row articles">
 	<%= render @articles %>
-</ul>
+</div>
 
 <%= will_paginate %>
