--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @article.title %></h1>
 
+<div class="byline">
+	<%= @article.byline %>
+</div>
+
 <%= raw RedCloth.new(@article.content).to_html %>
