--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,17 @@
 <header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<%= link_to "Montgomery Hills Baptist Church", '#', class: "brand" %>
+			<%= link_to @site_info.title, root_path, class: "brand" %>
 			<nav>
 				<ul class="nav pull-right">
+					<li><%= link_to "About",	'/articles/1' %></li>
+					<li><%= link_to "News",		'/articles/2' %></li>
+					<li><%= link_to "Youth",	'/articles/3' %></li>
+					<li><%= link_to "Ministries", '/articles/4' %></li>
+
 					<li><%= link_to "Home",		root_path %></li>
 					<% if signed_in? %>
-						<li><%= link_to "Users", users_path %></li>
-						<li id="fat-menu" class="dropdown">
+						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								Account <b class="caret"></b>
 							</a>
