--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,12 @@
 				</div>
 
 				<div class="span9">
+					<%= render 'layouts/main_menu' %>
+
 					<% flash.each do |key, value| %>
 						<div class="alert alert-<%= key %>"><%= value %></div>
 					<% end %>
+					
 					<%= yield %>
 				</div>
 
