--- a/app/views/site_infos/edit.html.erb
+++ b/app/views/site_infos/edit.html.erb
@@ -9,6 +9,9 @@
 			<%= f.label :title %>
 			<%= f.text_field :title %>
 
+			<%= f.label :menubar %>
+			<%= f.text_field :menubar %>
+			
 			<%= f.label :phone %>
 			<%= f.text_field :phone %>
 
