--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,13 @@
 
 				<div class="span9">
 					<%= render 'layouts/main_menu' %>
-
-					<% flash.each do |key, value| %>
-						<div class="alert alert-<%= key %>"><%= value %></div>
-					<% end %>
-					
-					<%= yield %>
+					<div class="body-area">
+						<% flash.each do |key, value| %>
+							<div class="alert alert-<%= key %>"><%= value %></div>
+						<% end %>
+						
+						<%= yield %>
+					</div>
 				</div>
 
 			</div>
