--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,29 +3,8 @@
 		<div class="container">
 			<%= link_to @site_info.title, root_path, class: "brand" %>
 			<nav>
-				<ul class="nav pull-right">
-					<li><%= link_to "About",	'/articles/1' %></li>
-					<li><%= link_to "News",		'/articles/2' %></li>
-					<li><%= link_to "Youth",	'/articles/3' %></li>
-					<li><%= link_to "Ministries", '/articles/4' %></li>
-
-					<li><%= link_to "Home",		root_path %></li>
-					<% if signed_in? %>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								Account <b class="caret"></b>
-							</a>
-							<ul class="dropdown-menu">
-								<li><%= link_to "Profile", current_user %></li>
-								<li><%= link_to "Settings", edit_user_path(current_user) %></li>
-								<li class="divider"></li>
-								<li><%= link_to "Sign out", signout_path, method: "delete" %></li>
-							</ul>
-						</li>
-					<% else %>
-						<li><%= link_to "Sign in",	signin_path %></li>
-					<% end %>
-				</ul>
+				<% m = MenuSystem.new(self, @site_info, @articles) %>
+				<%= m.navbar_html %>				
 			</nav>
 		</div>
 	</div>
