--- a/app/views/articles/_edit_form.html.erb
+++ b/app/views/articles/_edit_form.html.erb
@@ -4,15 +4,16 @@
 
 <div class="row">
 	<div class="span8">
-		<%= simple_form_for(@article, :html => {:class => 'form-horizontal' }) do |f| %>
+		<%= simple_form_for(@article, :html => {:class => 'form-horizontal',
+												:multipart => true }) do |f| %>
 
 			<%-# render 'shared/error_messages' -%>
 
 			<%-# f.error_messages -%>
 
 			<%= f.input :title %>
-			<%= f.input :label %>
 			<%= f.input :menu %>
+			<%= f.input :image, :as => :file %>
 			<%= f.input :author %>
 			<%= f.input :summary, :as => :text, :input_html => { :rows => 4 } %> 
 			<%= f.input :content, :as => :text %> 
