--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,23 @@
-<div class="center hero-unit">
-	<h1>Welcome to Montgomery Hills Baptist Church</h1>
+<h1>Welcome to Montgomery Hills Baptist Church</h1>
 
-	<p>We don't have any front page content yet.  Check back later.</p>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
 
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
+<div class="row articles">
+	<% @topstories.each do |topstory| %>
 
+		<div class="index_row">
+			<div class="span3">
+				<%= image_tag(topstory.image_url(:thumb)) if !topstory.image_url.blank? %>
+			</div>
+
+			<div class="span6">
+				<h5><%= topstory.title %></h5>
+				<%= raw topstory.summary_text %>
+				<div class="pull-right readmore">
+					<%= link_to "read more", topstory, class: "readmore" %>
+				</div>
+			</div>
+		</div>
+
+	<% end %>
 </div>
