Start of sidebar menublock support

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
 			<%= link_to @site_info.title, root_path, class: "brand" %>
 			<nav>
 				<% m = MenuSystem.new(self, @site_info, @articles) %>
-				<%= m.navbar_html %>				
+				<%= m.navbar_html %>
+				<%-# m.test1(self) -%>
 			</nav>
 		</div>
 	</div>
