--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,8 +1,8 @@
-<h1>All articles</h1>
+<h1>All galleries</h1>
 
 <div class="row">
 	<div class="new-content-button pull-right">
-		<%= link_to "New Article", new_article_path, class: "link_button" %>
+		<%= link_to "New Gallery", new_gallery_path, class: "link_button" %>
 		<br>
 	</div>
 </div>
@@ -11,8 +11,8 @@
 	<%= will_paginate %>
 </div>
 
-<div class="row articles">
-	<%= render @articles %>
+<div class="row galleries">
+	<%= render @galleries %>
 </div>
 
 <%= will_paginate %>
