--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,25 @@
 <h1><%= @article.title %></h1>
 
-<%= image_tag(@article.image_url(:slide)) if @article.image_url.blank? == false %>
+<%-# image_tag(@article.image_url(:slide)) if @article.image_url.blank? == false -%>
+
+<% if @article.image.blank? == false %>
+	<div class="slide-photo">
+		<%= photo_tag_to_original(@article.image, :slide) %>
+	</div>
+<% elsif @article.gallery.blank? == false %>
+	<div class="slide-photo">
+		<% gallery = Gallery.find_by_name(@article.gallery) %>
+		<%= photo_tag_to_original(cover_photo(gallery.photos), :slide) if gallery %>
+	</div>	
+<% end %>
+
+<% if @article.gallery.blank? == false %>
+	<div class="gallery-link">
+
+	<%= link_to "More Photos", Gallery.find_by_name(@article.gallery), 
+								class: "gallery-link" %>
+	</div>
+<% end %>
 
 <div class="byline">
 	<%= @article.byline %>
