--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -3,6 +3,7 @@
 <div class="row">
 	<div class="new-content-button pull-right">
 		<%= link_to "New Gallery", new_gallery_path, class: "link_button" %>
+		<%= link_to "New Photo", new_photo_path, class: "link_button" %>
 		<br>
 	</div>
 </div>
