--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -211,6 +211,9 @@ footer {
 	margin: 20px 10px;
 	padding: 10px 5px 10px 10px;
 	background-color: $grayLighter;
+    li {
+        font-size: 0.9em;
+    }
 	p {
 		font-size: 0.8em;
 	}
