--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,13 @@
 <div class="sidebar">
+
+    <% mb = @ms.create_menu_block %>
+    <% if mb != nil %>
+        <div class="sidebar-block">
+            <% debugger %>
+            <%= mb.to_html %>
+        </div>
+    <% end %>
+
 	<div class="sidebar-block">
 		<h2>Weekly Schedule</h2>
 		<%= raw RedCloth.new(@site_info.weekly).to_html %>
