--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,12 +1,14 @@
 <h1>All galleries</h1>
 
-<div class="row">
-	<div class="new-content-button pull-right">
-		<%= link_to "New Gallery", new_gallery_path, class: "link_button" %>
-		<%= link_to "New Photo", new_photo_path, class: "link_button" %>
-		<br>
-	</div>
-</div>
+<% if privileged_user?(current_user) %>
+    <div class="row">
+        <div class="new-content-button pull-right">
+            <%= link_to "New Gallery", new_gallery_path, class: "link_button" %>
+            <%= link_to "New Photo", new_photo_path, class: "link_button" %>
+            <br></br>
+        </div>
+    </div>
+<% end %>
 
 <div class="row">
 	<%= will_paginate %>
