--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	  <%= render 'layouts/shim' %>
 	</head>
 	<body>
-		<% @ms = MenuSystem.new(self, @site_info, @articles) %>
+		<% @ms = MenuSystem.new(self, @site_info, @all_articles) %>
 
 		<%= render 'layouts/header' %>
         
