--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,16 +1,32 @@
 <div class="index_row">
-	<div class="span2">
-		<%= link_to article.title, article, class: "title" %>
-	</div>
+    <% if @blurb == false %>
+        <div class="span2">
+            <%= link_to article.title, article, class: "title" %>
+        </div>
 
-	<div class="span5">
-		<%= raw article.summary_text %>
-	</div>
+        <div class="span5">
+            <%= raw article.summary_text %>
+        </div>
 
-	<div class="span2">
-		<%= link_to "Edit", edit_article_path(article), class: "action_link" %>
-		<%= link_to "Delete", article, class: "action_link",
-										method: :delete,
-										data: { confirm: "Are you sure?" } %>
-	</div>
+        <div class="span2">
+            <%= link_to "Edit", edit_article_path(article), class: "action_link" %>
+            <%= link_to "Delete", article, class: "action_link",
+                                            method: :delete,
+                                            data: { confirm: "Are you sure?" } %>
+        </div>
+    <% else %>
+        <div class="span2">
+            <% if article.image.blank? == false %>
+                <%= image_tag(photo_version(article.image, :thumb)) %>
+            <% end %>
+        </div>
+
+        <div class="span7">
+            <h5><%= article.title %></h5>
+            <%= raw article.summary_text %>
+            <div class="pull-right readmore">
+                <%= link_to "read more", article, class: "readmore" %>
+            </div>
+        </div>
+    <% end %>
 </div>
