--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,25 +1,6 @@
 <h1>Welcome to Montgomery Hills Baptist Church</h1>
 
-<%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
-
+<% @blurb = true %>
 <div class="row articles">
-	<% @topstories.each do |topstory| %>
-
-		<div class="index_row">
-			<div class="span2">
-                <% if topstory.image.blank? == false %>
-                    <%= image_tag(photo_version(topstory.image, :thumb)) %>
-                <% end %>
-			</div>
-
-			<div class="span7">
-				<h5><%= topstory.title %></h5>
-				<%= raw topstory.summary_text %>
-				<div class="pull-right readmore">
-					<%= link_to "read more", topstory, class: "readmore" %>
-				</div>
-			</div>
-		</div>
-
-	<% end %>
+	<%= render @articles %>
 </div>
