--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -1,22 +1,19 @@
 <h1><%= yield(:header) %></h1>
 
 <div class="row">
-	<div class="span5 offset2">
-		<%= form_for(@user) do |f| %>
+	<div class="span8">
+		<%= simple_form_for(@user, :html => {:class => 'form-horizontal'}) do |f| %>
 
 			<%= render 'shared/error_messages' %>
 
-			<%= f.label :name %>
-			<%= f.text_field :name %>
+			<%= f.input :name %>
+			<%= f.input :email %>
+			<%= f.input :password %>
+			<%= f.input :password_confirmation, label: "Confirm Password" %>
 
-			<%= f.label :email %>
-			<%= f.text_field :email %>
-
-			<%= f.label :password %>
-			<%= f.password_field :password %>
-
-			<%= f.label :password_confirmation, "Confirm Password" %>
-			<%= f.password_field :password_confirmation %>
+            <% if current_user.admin? %>
+                <%= f.input :author %>
+            <% end %>
 
 			<%= f.submit yield(:submit), class: "btn btn-large btn-primary" %>
 		<% end %>
