--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -9,11 +9,13 @@
 		<%= link_to gallery.name, gallery, class: "gallery-title" %>
 	</div>
 
-	<div class="span2">
-		<%= link_to "Edit", edit_gallery_path(gallery), class: "action_link" %>
-		<%= link_to "Delete", gallery, class: "action_link",
-										method: :delete,
-										data: { confirm: "Are you sure?" } %>
-	</div>
+    <% if signed_in? && privileged_user?(current_user) %>
+        <div class="span2">
+            <%= link_to "Edit", edit_gallery_path(gallery), class: "action_link" %>
+            <%= link_to "Delete", gallery, class: "action_link",
+                                            method: :delete,
+                                            data: { confirm: "Are you sure?" } %>
+        </div>
+    <% end %>
 </div>
 </div>
