--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,7 +18,8 @@
         <% pic_size = (@title == 'Staff') ? :bio : :thumb %>
         <div class="span2">
             <% if article.image.blank? == false %>
-                <%= image_tag(photo_version(article.image, pic_size)) %>
+                <% photo = Photo.photo_object(article.image) %>
+                <%= image_tag(photo.image_size(pic_size)) %>
             <% end %>
         </div>
 
