--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,6 +13,7 @@
 	</div>
 
 	<div class="sidebar-block">
-		<%= link_to image_tag('map_icon200.jpg'), 'https://maps.google.com/maps?q=9727+Georgia+Ave.+Silver+Spring,+MD+20910&hl=en&sll=38.804821,-77.236966&sspn=2.10172,3.147583&hnear=9727+Georgia+Ave,+Silver+Spring,+Maryland+20910&t=m&z=16' %>
+        <% addr = @site_info.address %>
+		<%= link_to image_tag('map_icon200.jpg'), "https://maps.google.com/maps?q=#{addr}" %>
 	</div>
 </div>
