--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,10 @@
-<% if @user.errors.any? %>
-	<% @errs = filter_out_digest_error(@user.errors.full_messages) %>
+<% if @errmsgs.any? %>
 	<div id="error_explanation">
 		<div class="alert alert-error">
-			The form contains <%= pluralize(@errs.count, "error") %>.
+			The form contains <%= pluralize(@errmsgs.count, "error") %>.
 		</div>
 		<ul>
-		<% @errs.each do |msg| %>
+		<% @errmsgs.each do |msg| %>
 			<li>* <%= msg %></li>
 		<% end %>
 		</ul>
