--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -4,6 +4,7 @@
 	<div class="span8">
 		<%= simple_form_for(@user, :html => {:class => 'form-horizontal'}) do |f| %>
 
+        	<% @errmsgs = filter_out_digest_error(@user.errors.full_messages) %>
 			<%= render 'shared/error_messages' %>
 
 			<%= f.input :name %>
@@ -11,7 +12,7 @@
 			<%= f.input :password %>
 			<%= f.input :password_confirmation, label: "Confirm Password" %>
 
-            <% if current_user.admin? %>
+            <% if signed_in? && current_user.admin? %>
                 <%= f.input :author %>
             <% end %>
 
