--- a/app/views/static_pages/content.html.erb
+++ b/app/views/static_pages/content.html.erb
@@ -18,6 +18,9 @@
             <span class="span2">
             <%= link_to "Articles", articles_path, class: "link_button" %>
             </span>
+            <span class="span2">
+            <%= link_to "Menu Debug", '/menu_tree_display', class: "btn-info" %>
+            </span>
         </div>
     </div>
 
