Add events support

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
-<h1>All users</h1>
+<h1>All events</h1>
 
 <%= will_paginate %>
 
 <ul class="simple-index">
-	<%= render @users %>
+	<%= render @events %>
 </ul>
 
 <%= will_paginate %>
