--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,10 @@ h2 {
 	color: $grayLight;
 }
 
+h4 {
+    margin-bottom: 2em;
+}
+
 h5 {
 	margin-top: 2em;
 }
@@ -316,7 +320,7 @@ input, textarea, select, .uneditable-input {
 
 /* Index lists */
 
-.users {
+.simple-index {
 	list-style: none;
 	margin: 0;
 	li {
