--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,15 @@
 
 			<div class="row">
  
-				<div class="span3">
-					<%= render 'layouts/sidebar' %>
-				</div>
+                <% if params[:action] != 'calendar' %>
+                    <div class="span3">
+                        <%= render 'layouts/sidebar' %>
+                    </div>
+                <% end %>
 
-				<div class="span9">
+                <% body_span = (params[:action] == 'calendar') ? 'span12' : 'span9' %>
+
+				<%= "<div class=#{body_span}>".html_safe %>
 					<div class="body-area">
 						<% flash.each do |key, value| %>
 							<div class="alert alert-<%= key %>"><%= value %></div>
