--- a/app/views/static_pages/content.html.erb
+++ b/app/views/static_pages/content.html.erb
@@ -41,6 +41,17 @@
     <div class="row span9">
         <div class="new-content-button">
             <span class="span2">
+            <%= link_to "Event Help", '/event_help', class: "btn-info" %>
+            </span>
+            <span class="span2">
+            <%= link_to "Events", events_path, class: "link_button" %>
+            </span>
+        </div>
+    </div>
+
+    <div class="row span9">
+        <div class="new-content-button">
+            <span class="span2">
             <%= link_to "Site Info Help", '/site_info_help', class: "btn-info" %>
             </span>
             <span class="span2">
