--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,13 +7,15 @@
     <div class="span3">
         <%= event.date_string %>
     </div>
-    
-    <div class="span2">
-        <%= link_to "Edit", edit_event_path(event), class: "action_link" %>
 
-        <%= link_to "Delete", event, class: "action_link",
-                                    method: :delete,
-                                    data: { confirm: "Are you sure?" } %>
-    </div>
+    <% if signed_in? && privileged_user?(current_user) %>
+        <div class="span2">
+            <%= link_to "Edit", edit_event_path(event), class: "action_link" %>
+
+            <%= link_to "Delete", event, class: "action_link",
+                                        method: :delete,
+                                        data: { confirm: "Are you sure?" } %>
+        </div>
+    <% end %>
 
 </li>
