--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -270,7 +270,7 @@ footer {
 
 .sidebar-block {
 	margin: 20px 10px;
-	padding: 10px 5px;
+	padding: 10px 5px 10px 10px;
 	background-color: $grayLighter;
     li {
         font-size: 0.9em;
