--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,12 +4,12 @@
 
 <% if @article.image.blank? == false %>
 	<div class="slide-photo">
-		<%= Photo.photo_tag_to_original(@article.image, :slide) %>
+		<%= photo_tag_to_original(@article.image, :slide) %>
 	</div>
 <% elsif @article.gallery.blank? == false %>
 	<div class="slide-photo">
 		<% gallery = Gallery.find_by_name(@article.gallery) %>
-		<%= Photo.photo_tag_to_original(cover_photo(gallery.photos), :slide) if gallery %>
+		<%= photo_tag_to_original(cover_photo(gallery.photos), :slide) if gallery %>
 	</div>	
 <% end %>
 
