--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,4 +16,9 @@
         <% addr = @site_info.address %>
 		<%= link_to image_tag('map_icon200.jpg'), "https://maps.google.com/maps?q=#{addr}" %>
 	</div>
+
+	<div class="sidebar-block">
+		<%= link_to image_tag('calendar_thumb200.jpg'), "/calendar" %>
+	</div>
+
 </div>
