Add filter selector to Article Index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -142,6 +142,11 @@ ul.nav li.dropdown:hover ul.dropdown-menu {
 	padding-right: 15px;
 }
 
+.selector .active {
+    color: black;
+    background-color: $grayLighter;
+}
+
 .new-content-button {
 	margin-right: 10px;
 	margin-bottom: 20px;
