--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,13 @@
-<h1>All articles</h1>
+<h1>Articles</h1>
+
+<% sb = SelectorBlock.new(self, '/articles?filter=',
+                             ['All', 'FrontPage', 'News', 'Menus'],
+                             @filter) %>
 
 <div class="row">
+    <%= sb.to_html %>
+
+
 	<div class="new-content-button pull-right">
 		<%= link_to "New Article", new_article_path, class: "link_button" %>
         <br></br>
