Add menu field checks to article validation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -382,6 +382,7 @@ input, textarea, select, .uneditable-input {
 	overflow: auto;
 	.title {
 		float: right;
+        text-align: right;
 	}
 	.gallery-title {
 		float: left;
