--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -219,6 +219,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu {
 }
 
 .calendar {
+    margin-left: 20px;
     th {
         background-color: $blueLighter;
         width: 14.286%;
