--- a/app/views/site_infos/edit.html.erb
+++ b/app/views/site_infos/edit.html.erb
@@ -1,28 +1,15 @@
 <h1>Update Site Information</h1>
 
 <div class="row">
-	<div class="span5 offset2">
-		<%= form_for(@site_info) do |f| %>
+	<div class="span8">
+        <%=  simple_form_for(@site_info, :html => {:class => 'form-horizontal'}) do |f| %>
 
-			<%-# render 'shared/error_messages' -%>
-
-			<%= f.label :title %>
-			<%= f.text_field :title %>
-
-			<%= f.label :menubar %>
-			<%= f.text_field :menubar %>
-			
-			<%= f.label :phone %>
-			<%= f.text_field :phone %>
-
-			<%= f.label :address %>
-			<%= f.text_field :address %>
-
-			<%= f.label :email %>
-			<%= f.text_field :email %>
-
-			<%= f.label :weekly %>
-			<%= f.text_area :weekly %>
+            <%= f.input :title %>
+            <%= f.input :menubar %>
+            <%= f.input :phone %>
+            <%= f.input :address %>
+            <%= f.input :email %>
+            <%= f.input :weekly, :as => :text, :input_html => { :rows => 10 } %>
 
 			<%= f.submit 'Save changes', class: "btn btn-large btn-primary" %>
 		<% end %>
